--- a/index.html
+++ b/index.html
@@ -20,6 +20,31 @@
                 </div>
             </div>
         </article>
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>programacao</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p>O que é CSS?</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                  <p>O CSS é uma linguagem de estilização.</p>
+                </div>
+            </div>
+
+        </article>
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3 class="programacao">Programação</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p>O que é HTML?</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    <p>É uma linguagem de marcação.</p>
+                </div>
+
+            </div>
+
+         </article>
         </section>
     </main>
     <footer>
